tests/baselines/reference/enumsWithMultipleDeclarations1.errors.txt
enumsWithMultipleDeclarations1.ts(6,3): error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.
enumsWithMultipleDeclarations1.ts(10,3): error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.


==== enumsWithMultipleDeclarations1.ts (2 errors) ====
    enum E {
      A
    }
    
    enum E {
      B
      ~
!!! error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.
    }
    
    enum E {
      C
      ~
!!! error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.
    }